@@ -1150,7 +1150,7 @@ BEGIN
     LTEXT           "&Sound:",IDC_STATIC,6,35,22,8
 END
 
-IDD_PROPTABLE_VISUALS DIALOGEX 0, 0, 125, 60
+IDD_PROPTABLE_VISUALS DIALOGEX 0, 0, 125, 90
 STYLE DS_SETFONT | WS_CHILD | WS_VISIBLE
 FONT 8, "MS Sans Serif", 0, 0, 0x0
 BEGIN
@@ -1159,6 +1159,10 @@ BEGIN
     CONTROL         "Render Shadows",9,"Button",BS_AUTOCHECKBOX | WS_TABSTOP,7,49,71,10
     LTEXT           "I&mage:",-1,7,24,22,8
     LTEXT           "&Color",-1,7,10,20,9
+    EDITTEXT        IDC_TABLESOUNDVOLUME,101,60,20,12,ES_AUTOHSCROLL
+    LTEXT           "Table Sound Volume (0..100)",-1,7,62,94,8
+    EDITTEXT        IDC_TABLEMUSICVOLUME,101,74,20,12,ES_AUTOHSCROLL
+    LTEXT           "Table Music Volume (0..100)",-1,7,76,94,8
 END
 
 IDD_PROPTABLE_EDITOR DIALOGEX 0, 0, 125, 53
@@ -1939,6 +1943,7 @@ BEGIN
     IDS_MISC                "Misc"
     IDS_LIGHTSEQ_DESC       "LightSequencer Class"
     IDS_VISUALS             "Colors & Formatting"
+    IDS_VISUALS_SOUND       "Colors, Sound & Formatting"
     IDS_POSITION            "Position"
     IDS_STATE               "State"
     IDS_PHYSICS             "Physics"
